--- a/toms-electric/src/Home.css
+++ b/toms-electric/src/Home.css
@@ -1,8 +1,17 @@
+/* Site Wide */
+
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-.background-color {
-    background-color: #1e2022
+h1 {
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: x-large; 
 }
+
+.background-color {
+    background-color: #1e2022; 
+}
+
+/* NavBar */
 
 .nav-btns {
     background-color: #1e2022; 
@@ -16,12 +25,75 @@
     border-color: #282c31;
 }
 
-h1 {
-    font-family: 'Bebas Neue', sans-serif;
-    font-size: x-large; 
-}
-
 .logo-size {
     width: 100px; 
     height: 100px; 
+}
+
+/* Lights */
+
+.background-image {
+    width: 100%; 
+    height: 80vh;
+    object-fit: cover;
+    object-position: center;
+}
+
+/* Mobile View */
+@media (max-width: 464px) {
+    .background-image {
+        height: 30vh; 
+        object-position: center; 
+    }
+}
+
+.carousel-title {
+    position: absolute; 
+    top: 30%; 
+    left: 50%; 
+    transform: translate(-50%); 
+    color: white; 
+    font-size: 4rem; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
+    z-index: 1; 
+    padding-bottom: 10px; /* Add some space between title and the line */
+    border-bottom: 2px solid white; /* Create a white line beneath the title */
+    text-align: center;
+}
+
+.carousel-text {
+    position: absolute; 
+    top: 45%; 
+    left: 50%; 
+    transform: translate(-50%); 
+    color: white; 
+    font-size: 1.5rem; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
+    z-index: 1; 
+    padding-top: 20px; 
+    text-align: center;
+}
+
+.carousel-overlay {
+    position: absolute; /* Position the overlay inside the carousel item */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Black color with 50% opacity */
+    z-index: 0; /* Put the overlay below the text */
+}
+
+@media (max-width: 464px) {
+    .carousel-title {
+        font-size: 2rem; /* Smaller font size for mobile */
+        top: 5%; /* Adjust the vertical position */
+        padding-bottom: 15px; /* Reduce spacing */
+    }
+
+    .carousel-text {
+        font-size: 1.2rem; /* Smaller font size for mobile */
+        top: 45%; /* Adjust the vertical position */
+        padding-top: 20px; /* Reduce spacing */
+    }
 }
