--- a/toms-electric/src/App.css
+++ b/toms-electric/src/App.css
@@ -11,6 +11,10 @@ h1 {
     background-color: #1e2022; 
 }
 
+.alt-background {
+    background-color: #e6e6e6;
+}
+
 .relative {
     position: relative; 
 }
@@ -41,7 +45,7 @@ h1 {
     height: 100px; 
 }
 
-/* Lights */
+/* Slides */
 
 .background-image {
     width: 100%; 
@@ -69,6 +73,7 @@ h1 {
 }
 
 /* Carousel */
+
 .carousel-content {
     position: absolute;
     top: 40%;
@@ -179,6 +184,57 @@ h1 {
     background-image: url('/public/kitchen_lights.webp');
     background-size: cover;
     background-position: center;
-    height: 100%; /* Adjust based on your needs */
+    height: 100%; 
     width: 100%;
+}
+
+/* About */ 
+
+.headshot {
+    width: 90%; 
+    height: 100%;
+    padding-top: 2rem; 
+    padding-bottom: 2rem;
+}
+
+@media (min-width: 991px) {
+    .headshot {
+        width: 100%; 
+        height: 100%;
+        padding-top: 2rem; 
+        padding-bottom: 2rem;
+    }
+
+    .full-view {
+        height: 100vh;  
+        align-items: start; 
+    }
+
+    .about-text {
+        padding-top: 5rem;
+    }
+}
+
+@media (min-width: 1159) {
+    .margin {
+        margin-top: 0rem;
+    }
+}
+.margin {
+    margin-top: 2rem; 
+}
+
+.full-view {
+    align-items: start; 
+    overflow-x: hidden;
+}
+
+.title {
+    font-size: xxx-large; 
+    text-decoration: underline; 
+    padding-bottom: 2rem;
+}
+
+.text {
+
 }
